Fix: JDK21 마이그레이션 실패